@@ -74,6 +74,7 @@ wxTreeEvent::wxTreeEvent(wxEventType commandType, int id)
            : wxNotifyEvent(commandType, id)
 {
     m_itemOld = 0l;
+    m_editCancelled = FALSE;
 }
 
 #endif // wxUSE_TREECTRL
